--- a/src/app/footer/sub-footer/sub-footer.component.html
+++ b/src/app/footer/sub-footer/sub-footer.component.html
@@ -1,33 +1,33 @@
 <section class="w-full bottom-0 text-sm">
-    <div class="bg-gray-950 rounded-b-md flex items-center h-14 md:h-12 lg:h-10">
-        <div class="grid grid-cols md:grid-cols-2 lg:grid-cols-3 mx-auto gap-2 lg:gap-0">
-            <div>
-                <h3 class="text-white pl-5 hidden md:block">
-                    &copy;<span class="text-red-600 font-bold font-sans">Berliz.</span> All right reserved
-                </h3>
-            </div>
-            <div>
-                <h3 class="text-white flex">
-                    <span class="block md:hidden mr-2">&copy;</span> Developed by
-                    <span class="ml-2 text-red-600 font-bold font-sans cursor-pointer" (click)="openBlessedTasela()">
-                        Blessed Tasela
-                    </span>
-                </h3>
-            </div>
-            <div class="flex flex-wrap gap-2 lg:gap-6 items-center col-span-2 lg:col-span-1 mx-auto">
-                <h3 class="text-white">
-                    FAQs
-                </h3>
-                <h3 class="text-white">
-                    Terms
-                </h3>
-                <h3 class="text-white">
-                    Privacy
-                </h3>
-                <h3 class="text-white">
-                    Help
-                </h3>
-            </div>
-        </div>
+  <div class="bg-gray-950 rounded-b-md py-4 px-4">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-center text-white text-center md:text-left">
+
+      <!-- Column 1: Copyright -->
+      <div>
+        <p>&copy; {{ currentYear }} Berliz. All rights reserved.</p>
+      </div>
+
+      <!-- Column 2: Designed by -->
+      <div>
+        <h3 class="flex justify-center md:justify-start items-center gap-1">
+          <span class="hidden md:inline">&copy;</span>
+          Designed with 
+          <span class="text-red-600">&hearts;</span> 
+          by 
+          <span class="text-red-600 font-bold cursor-pointer" (click)="openBlessedTasela()">
+            Blessed Tasela
+          </span>
+        </h3>
+      </div>
+
+      <!-- Column 3: Links -->
+      <div class="flex flex-wrap justify-center md:justify-end gap-4 text-sm">
+        <a href="#" class="hover:text-red-600 transition">FAQs</a>
+        <a href="#" class="hover:text-red-600 transition">Terms</a>
+        <a href="#" class="hover:text-red-600 transition">Privacy</a>
+        <a href="#" class="hover:text-red-600 transition">Help</a>
+      </div>
+
     </div>
+  </div>
 </section>
