--- a/src/app/landing/offers-list/offers-list.component.html
+++ b/src/app/landing/offers-list/offers-list.component.html
@@ -1,7 +1,5 @@
 <!-- Title Banner -->
-<div class="m-auto min-h-screen">
-
-
+<div class="m-auto min-h-screen items-center justify-center text-center flex">
 
     <!-- Offers Section -->
     <!-- <section class="bg-gradient-to-br from-black via-gray-900 to-red-900 py-12 px-4 sm:px-8 rounded-md shadow-lg"> -->
