--- a/src/app/contact-us/contact-us-hero/contact-us-hero.component.html
+++ b/src/app/contact-us/contact-us-hero/contact-us-hero.component.html
@@ -1,5 +1,5 @@
 <section class="w-full relative">
-    <div class="hero-bg justify-center w-full md:h-64 h-48 p-24 mt-5">
+    <div class="hero-bg justify-center w-full h-64 p-24 mt-5">
         <h1
             class="font-sans font-bold text-red-600 text-center w-full rounded-md uppercase text-4xl cursor-pointer w-full">
             Contact us
