--- a/src/app/exercises/exercises-page/exercises-page.component.html
+++ b/src/app/exercises/exercises-page/exercises-page.component.html
@@ -1,6 +1,4 @@
-<!-- <app-testimonial-hero></app-testimonial-hero>
-<app-testimonial-list></app-testimonial-list>
-<app-testimonial-form></app-testimonial-form> -->
+<!-- <app-under-construction></app-under-construction> -->
 
 <div class="mt-20 p-8 h-screen flex-col w-full font-extrabold">
     <h2 class="mb-10 text-4xl text-red-600 ">Coming Soon.....</h2>
