--- a/src/app/footer/sub-footer/sub-footer.component.html
+++ b/src/app/footer/sub-footer/sub-footer.component.html
@@ -1,6 +1,6 @@
 <section class="w-full bottom-0 text-sm">
   <div class="bg-gray-950 rounded-b-md py-4 px-4">
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-center text-white text-center md:text-left">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-center text-white text-center ">
 
       <!-- Column 1: Copyright -->
       <div>
@@ -9,7 +9,7 @@
 
       <!-- Column 2: Designed by -->
       <div>
-        <h3 class="flex justify-center md:justify-start items-center gap-1">
+        <h3 class="flex justify-center items-center gap-1">
           <span class="hidden md:inline">&copy;</span>
           Designed with 
           <span class="text-red-600">&hearts;</span> 
@@ -21,7 +21,7 @@
       </div>
 
       <!-- Column 3: Links -->
-      <div class="flex flex-wrap justify-center md:justify-end gap-4 text-sm">
+      <div class="flex flex-wrap justify-center gap-4 text-sm">
         <a href="#" class="hover:text-red-600 transition">FAQs</a>
         <a href="#" class="hover:text-red-600 transition">Terms</a>
         <a href="#" class="hover:text-red-600 transition">Privacy</a>
