--- a/src/app/navbar/navigation-bar/navigation-bar.component.html
+++ b/src/app/navbar/navigation-bar/navigation-bar.component.html
@@ -56,6 +56,13 @@
                     Dashboard
                 </a>
             </li>
+            <li>
+                <a [routerLink]="['/shop']"
+                    class="bg-white text-red-600 px-4 py-2 rounded-md hover:bg-red-700 hover:text-white transition duration-300 whitespace-nowrap inline-flex items-center gap-2">
+                    <i-feather name="shopping-cart"></i-feather>
+                    Shop
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
