--- a/src/app/report-problem/report-problem-page/report-problem-page.component.html
+++ b/src/app/report-problem/report-problem-page/report-problem-page.component.html
@@ -1,1 +1,4 @@
-<p>report-problem-page works!</p>
+<div class="mt-20 p-8 h-screen flex-col w-full font-extrabold">
+    <h2 class="mb-10 text-4xl text-red-600 ">Coming Soon.....</h2>
+    <p class="text-2xl text-white">This page is Under Construction</p>
+</div>
