--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,4 +1,4 @@
-<div class="mt-20  p-8 h-screen flex-col w-full ">
-    <h2 class="mb-10 text-4xl">404 - Page Not Found.</h2>
-    <p class="text-2xl">The requested page does not exist.</p>
+<div class="mt-20 p-8 h-screen flex-col w-full font-extrabold">
+    <h2 class="mb-10 text-4xl text-red-600 ">404 - Page Not Found.</h2>
+    <p class="text-2xl text-white">The requested page does not exist.</p>
 </div>
