--- a/src/app/products/products-page/products-page.component.html
+++ b/src/app/products/products-page/products-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-5 items-center justify-center bg-gray-200 fixed right-0 left-0 
+<!-- <div class="flex flex-col gap-5 items-center justify-center bg-gray-200 fixed right-0 left-0 
                 top-0 bottom-0 h-screen font-sans rounded-md">
     <h1 class="text-2xl uppercase font-bold text-gray-950">
         Buy Now
@@ -21,4 +21,6 @@
         </button>
         </div>
     </div>
-</div>
+</div> -->
+
+<app-under-construction></app-under-construction>
